Travel Agency v.1.0 Add Final Tests