@@ -1,12 +1,10 @@
 package com.epam.agency.service;
 
-import com.epam.finaltask.dto.UserDTO;
-import com.epam.finaltask.exception.AlreadyExistsException;
-import com.epam.finaltask.exception.NotFoundException;
-import com.epam.finaltask.mapper.UserMapper;
-import com.epam.finaltask.model.User;
-import com.epam.finaltask.model.enums.Role;
-import com.epam.finaltask.repository.UserRepository;
+import com.epam.agency.dto.UserDTO;
+import com.epam.agency.mapper.UserMapper;
+import com.epam.agency.model.User;
+import com.epam.agency.model.enums.Role;
+import com.epam.agency.repository.UserRepository;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -17,20 +15,16 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.security.crypto.password.PasswordEncoder;
-import org.springframework.test.context.TestPropertySource;
 
 import java.math.BigDecimal;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-@TestPropertySource
 class UserServiceImplTest {
 
     @Mock
@@ -46,25 +40,30 @@ class UserServiceImplTest {
     private UserServiceImpl userService;
 
     @Test
-    void registerUser_SuccessTest() {
-        // Given
-        UserDTO userDTO = new UserDTO();
-        userDTO.setUsername("TestUser123");
-        userDTO.setPassword("Passw0rd");
-        userDTO.setRole("USER");
-        userDTO.setAccountStatus(false);
-        userDTO.setBalance(BigDecimal.valueOf(100.0));
-        String encryptedPassword = "$2a$12$Tq7niswv6pFvG/u/Xvic0Oae88eFXKsBsiB8IeLre8QSWB4/lNS32";
+    void registerUser_ShouldReturnUserDTO() {
+        //Arrange
+        UserDTO userDTO = UserDTO.builder()
+                .username("TestUser123")
+                .password("Passw0rd")
+                .phoneNumber(null)
+                .email("test@test.com")
+                .build();
 
         User user = User.builder()
+                .id(UUID.randomUUID())
                 .username(userDTO.getUsername())
                 .password(userDTO.getPassword())
-                .role(Role.USER)
-                .accountStatus(userDTO.isAccountStatus())
-                .balance(userDTO.getBalance())
-                .orders(null)
                 .phoneNumber(null)
+                .avatarPath(null)
+                .role(Role.USER)
+                .accountStatus(false)
+                .balance(BigDecimal.valueOf(0))
+                .orders(null)
+                .avatarPath(null)
+                .provider("TravelAgency")
                 .build();
+
+        String encryptedPassword = "$2a$12$Tq7niswv6pFvG/u/Xvic0Oae88eFXKsBsiB8IeLre8QSWB4/lNS32";
 
         when(userMapper.toUser(any(UserDTO.class))).thenReturn(user);
         when(userRepository.existsByUsername(userDTO.getUsername())).thenReturn(false);
@@ -72,183 +71,119 @@ class UserServiceImplTest {
         when(userRepository.save(any(User.class))).thenReturn(user);
         when(userMapper.toUserDTO(any(User.class))).thenReturn(userDTO);
 
-        // When
+        //Act
         UserDTO registeredUserDTO = userService.registerUser(userDTO);
 
-        // Then
-        assertNotNull(registeredUserDTO, "Registered UserDTO should not be null");
+        //Assert
+        assertThat(registeredUserDTO).isNotNull();
         verify(userRepository, times(1)).save(any(User.class));
         verify(passwordEncoder, times(1)).encode(eq("Passw0rd"));
     }
 
     @Test
-    void checkUserData_UsernameIsAlreadyExistsInDB_ThrowEntityAlreadyExistsExceptionTest() {
-        // Given
-        UserDTO userDto = new UserDTO();
-        userDto.setUsername("userName");
-        userDto.setPassword("passwordTT19");
-        String errorMessage = "status.user.already.exist";
-        String errorCode = "CONFLICT";
+    void updateUserAvatar_ShouldUpdateAvatarPath() {
+        //Arrange
+        String userId = "550e8400-e29b-41d4-a716-446655440000";
+        String avatarPath = "bear.png";
 
-        // When
-        when(userRepository.existsByUsername(userDto.getUsername())).thenReturn(true);
-
-        // Then
-        AlreadyExistsException exception = assertThrows(AlreadyExistsException.class, () ->
-                userService.registerUser(userDto));
-
-        assertEquals(AlreadyExistsException.class, exception.getClass());
-        assertEquals(errorMessage, exception.getMessage());
-        assertEquals(errorCode, exception.getStatusCode());
-    }
-
-    @Test
-    void changeUserBalance_SuccessTest() {
-        // Given
-        String userId = UUID.randomUUID().toString();
-        UserDTO userDTO = new UserDTO();
-        userDTO.setId(userId);
-        userDTO.setBalance(BigDecimal.valueOf(1000));
-
-        User user = new User();
-        user.setId(UUID.fromString(userId));
-        user.setBalance(BigDecimal.valueOf(1000));
-
-        BigDecimal amountToAdd = BigDecimal.valueOf(500);
+        User user = User.builder()
+                .id(UUID.fromString(userId))
+                .avatarPath(null)
+                .build();
 
         when(userRepository.findById(UUID.fromString(userId))).thenReturn(Optional.of(user));
-        when(userRepository.save(user)).thenReturn(user);
 
-        // When
-        userService.changeUserBalance(userDTO, amountToAdd);
+        //Act
+        userService.updateUserAvatar(avatarPath, userId);
 
-        // Then
-        assertEquals(BigDecimal.valueOf(1500), user.getBalance(), "User balance should be updated correctly");
+        //Assert
+        assertThat(user.getAvatarPath()).isEqualTo(avatarPath);
         verify(userRepository, times(1)).save(user);
     }
 
     @Test
-    void changeUserBalance_NegativeAmountTest() {
-        // Given
-        String userId = UUID.randomUUID().toString();
-        UserDTO userDTO = new UserDTO();
-        userDTO.setId(userId);
+    void changeUserBalance_ShouldUpdateBalance() {
+        //Arrange
+        String userId = "550e8400-e29b-41d4-a716-446655440000";
+        UserDTO userDTO = UserDTO.builder()
+                .id(userId)
+                .balance(BigDecimal.ZERO)
+                .build();
 
-        BigDecimal negativeAmount = BigDecimal.valueOf(-500);
+        BigDecimal amount = new BigDecimal(100);
 
-        // When & Then
-        assertThrows(NotFoundException.class, () -> userService.changeUserBalance(userDTO, negativeAmount),
-                "Expected NotFoundException to be thrown for negative amount");
+        User user = User.builder()
+                .id(UUID.fromString(userId))
+                .balance(BigDecimal.ZERO)
+                .build();
+
+        when(userRepository.findById(UUID.fromString(userId))).thenReturn(Optional.of(user));
+
+        //Act
+        userService.changeUserBalance(userDTO, amount);
+
+        //Assert
+        assertThat(user.getBalance()).isEqualTo(amount);
+        verify(userRepository, times(1)).save(user);
     }
 
     @Test
-    void changeUserStatus_SuccessTest() {
-        // Given
-        String userId = UUID.randomUUID().toString();
-        User user = new User();
-        user.setId(UUID.fromString(userId));
-        user.setAccountStatus(true);
+    void changeUserStatus_ShouldToggleAccountStatus() {
+        //Arrange
+        String userId = "550e8400-e29b-41d4-a716-446655440000";
+        User user = User.builder()
+                .id(UUID.fromString(userId))
+                .accountStatus(true)
+                .build();
 
         when(userRepository.findById(UUID.fromString(userId))).thenReturn(Optional.of(user));
-        when(userRepository.save(user)).thenReturn(user);
 
-        // When
+        //Act
         userService.changeUserStatus(userId);
 
-        // Then
-        assertFalse(user.isAccountStatus(), "User status should be changed to inactive");
+        //Assert
+        assertThat(user.isAccountStatus()).isFalse();
         verify(userRepository, times(1)).save(user);
     }
 
     @Test
-    void changeUserStatus_UserNotFoundTest() {
-        // Given
-        String userId = UUID.randomUUID().toString();
+    void getUserDTOById_ShouldReturnUserDTO() {
+        //Arrange
+        String userId = "550e8400-e29b-41d4-a716-446655440000";
+        User user = User.builder()
+                .id(UUID.fromString(userId))
+                .username("User")
+                .build();
 
-        when(userRepository.findById(UUID.fromString(userId))).thenReturn(Optional.empty());
-
-        // When & Then
-        assertThrows(NotFoundException.class, () -> userService.changeUserStatus(userId),
-                "Expected NotFoundException to be thrown when user is not found");
-    }
-
-    @Test
-    void getUserDTOById_SuccessTest() {
-        // Given
-        String userId = UUID.randomUUID().toString();
-        User user = new User();
-        user.setId(UUID.fromString(userId));
-        user.setUsername("testuser");
-        user.setEmail("testuser@example.com");
-
-        UserDTO userDTO = new UserDTO();
-        userDTO.setId(userId);
-        userDTO.setUsername("testuser");
-        userDTO.setEmail("testuser@example.com");
+        UserDTO expectedUserDTO = UserDTO.builder()
+                .id(userId)
+                .username(user.getUsername())
+                .build();
 
         when(userRepository.findById(UUID.fromString(userId))).thenReturn(Optional.of(user));
-        when(userMapper.toUserDTO(user)).thenReturn(userDTO);
+        when(userMapper.toUserDTO(user)).thenReturn(expectedUserDTO);
 
-        // When
+        //Act
         UserDTO result = userService.getUserDTOById(userId);
 
-        // Then
-        assertNotNull(result, "UserDTO should not be null");
-        assertEquals(userDTO.getId(), result.getId(), "User IDs should match");
-        assertEquals(userDTO.getUsername(), result.getUsername(), "Usernames should match");
-
-        verify(userRepository, times(1)).findById(UUID.fromString(userId));
-        verify(userMapper, times(1)).toUserDTO(user);
+        //Assert
+        assertThat(result.getUsername()).isEqualTo(expectedUserDTO.getUsername());
+        assertThat(result.getId()).isEqualTo(expectedUserDTO.getId());
     }
 
     @Test
-    void getAllUsers_SuccessTest() {
-        // Given
+    void getAllUsers_ShouldReturnPageOfUserDTOs() {
+        // Arrange
         Pageable pageable = PageRequest.of(0, 10);
-        User user = new User();
-        UserDTO userDTO = new UserDTO();
-        Page<User> usersPage = new PageImpl<>(Collections.singletonList(user), pageable, 1);
+        Page<User> userPage = new PageImpl<>(List.of(new User()));
 
-        when(userRepository.findAllUsers(null, null, pageable)).thenReturn(usersPage);
-        when(userMapper.toUserDTO(user)).thenReturn(userDTO);
+        when(userRepository.findAllUsers(null, null, pageable)).thenReturn(userPage);
 
-        // When
+        // Act
         Page<UserDTO> result = userService.getAllUsers(null, null, pageable);
 
-        // Then
-        assertNotNull(result);
-        assertEquals(1, result.getTotalElements());
+        // Assert
+        assertThat(result).hasSize(1);
         verify(userRepository, times(1)).findAllUsers(null, null, pageable);
-    }
-
-    @Test
-    void getUserByUsername_SuccessTest() {
-        // Given
-        String username = "testuser";
-        User user = new User();
-        user.setUsername(username);
-
-        when(userRepository.findUserByUsername(username)).thenReturn(Optional.of(user));
-
-        // When
-        User result = userService.getUserByUsername(username);
-
-        // Then
-        assertNotNull(result);
-        assertEquals(username, result.getUsername());
-        verify(userRepository, times(1)).findUserByUsername(username);
-    }
-
-    @Test
-    void saveUser_SuccessTest() {
-        // Given
-        User user = new User();
-        user.setId(UUID.fromString(UUID.randomUUID().toString()));
-
-        // When
-        userService.saveUser(user);
-
-        // Then
-        verify(userRepository, times(1)).save(user);
     }
 }
